enhace data provided by endpoint
